fix / profile img

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <header>
     <div class="sidenav-title">
-      <img src="assets\img\_CAM8856-1.jpg" class="sidenav-profile-picture"
+      <img src="assets\img\profile-img.jpg" class="sidenav-profile-picture"
         alt="picture of camilla">
       <div class="sidenav-title-text">
         <h1>Camilla Gammeri</h1>
