fix / profile img

--- a/index.html
+++ b/index.html
@@ -40,50 +40,49 @@
 
 <body>
 
-  <!-- SIDENAV -->
+<!-- SIDENAV -->
 
-  <header>
-    <div class="sidenav-title">
-      <img src="assets\img\profile-img.jpg" class="sidenav-profile-picture"
-        alt="picture of camilla">
-      <div class="sidenav-title-text">
-        <h1>Camilla Gammeri</h1>
-        <p>UX/UI Designer</p>
-      </div>
+<header>
+  <div class="sidenav-title">
+    <img src="assets/img/profile-img.jpg" class="sidenav-profile-picture" alt="picture of camilla">
+    <div class="sidenav-title-text">
+      <h1>Camilla Gammeri</h1>
+      <p>UX/UI Designer</p>
     </div>
-    <nav>
-      <ul class="sidenav-1">
-        <li><a href="index.html" class=btn-active><img src="assets\icons\home-dark.svg" alt="home icon" style="margin-right: 12px;">Home</a>
-        </li>
-        <li><a href="work.html"><img src="assets\icons\folder.svg" alt="work icon" class="sidenav-icon" style="margin-right: 12px;">Work</a>
-        </li>
-        <li><a href="about.html"><img src="assets\icons\user.svg" alt="user icon" class="sidenav-icon" style="margin-right: 12px;">About</a>
-        </li>
-        <li><a href="resume.html"><img src="assets\icons\paper.svg" alt="resume icon"
-              class="sidenav-icon" style="margin-right: 12px;">Resume</a></li>
-      </ul>
-      <ul class="sidenav-2">
-        <li><a href="https://www.linkedin.com/in/camilla-gammeri/" target="_blank"><img
-              src="assets\icons\linkedin.svg" alt="linkedin icon" class="sidenav-icon" style="margin-right: 12px;">LinkedIn<img
-              class="right-icon" src="assets\icons\arrow.svg" alt="external link icon"></a></li>
-        <li><a href="mailto:camillagammeri@gmail.com" target="_blank"><img src="assets\icons\mail.svg"
-              alt="mail icon" class="sidenav-icon" style="margin-right: 12px;">Email<img class="right-icon" src="assets\icons\arrow.svg"
-              alt="external link icon"></a></li>
-      </ul>
-    </nav>
-  </header>
-
-
-  <!-- CONTENT -->
-
-  <div>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna
-      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis
-      aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
   </div>
+  <nav>
+    <ul class="sidenav-1">
+      <li><a href="index.html" class=btn-active><img src="assets\icons\home-dark.svg" alt="home icon" style="margin-right: 12px;">Home</a>
+      </li>
+      <li><a href="work.html"><img src="assets\icons\folder.svg" alt="work icon" class="sidenav-icon" style="margin-right: 12px;">Work</a>
+      </li>
+      <li><a href="about.html"><img src="assets\icons\user.svg" alt="user icon" class="sidenav-icon" style="margin-right: 12px;">About</a>
+      </li>
+      <li><a href="resume.html"><img src="assets\icons\paper.svg" alt="resume icon"
+            class="sidenav-icon" style="margin-right: 12px;">Resume</a></li>
+    </ul>
+    <ul class="sidenav-2">
+      <li><a href="https://www.linkedin.com/in/camilla-gammeri/" target="_blank"><img
+            src="assets\icons\linkedin.svg" alt="linkedin icon" class="sidenav-icon" style="margin-right: 12px;">LinkedIn<img
+            class="right-icon" src="assets\icons\arrow.svg" alt="external link icon"></a></li>
+      <li><a href="mailto:camillagammeri@gmail.com" target="_blank"><img src="assets\icons\mail.svg"
+            alt="mail icon" class="sidenav-icon" style="margin-right: 12px;">Email<img class="right-icon" src="assets\icons\arrow.svg"
+            alt="external link icon"></a></li>
+    </ul>
+  </nav>
+</header>
+
+
+<!-- CONTENT -->
+
+<div>
+  <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+    magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis
+    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
+</div>
 
 </body>
 
