--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
   </div>
   <nav>
     <ul class="sidenav-1">
-      <li><a href="index.html" class=btn-active><img src="assets\icons\home-dark.svg" alt="home icon" style="margin-right: 12px;">Home</a>
+      <li><a href="index.html" class=btn-active><img src="assets\icons\user-dark.svg" alt="home icon" style="margin-right: 12px;">About</a>
       </li>
       <li><a href="work.html"><img src="assets\icons\folder.svg" alt="work icon" class="sidenav-icon" style="margin-right: 12px;">Work</a>
-      </li>
-      <li><a href="about.html"><img src="assets\icons\user.svg" alt="user icon" class="sidenav-icon" style="margin-right: 12px;">About</a>
       </li>
       <li><a href="resume.html"><img src="assets\icons\paper.svg" alt="resume icon"
             class="sidenav-icon" style="margin-right: 12px;">Resume</a></li>
@@ -76,24 +74,13 @@
 <!-- CONTENT -->
 
 <div class="content">
-  
-  <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    Excepteur sint
-    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    Excepteur sint
-    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    Excepteur sint
-    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </h1>
+
+  <h1>Ciao! Piacere di conoscerti 👋</h1>
+  <h2>Sono Camilla, UX/UI Designer Junior. Attualmente mi trovo a Pavia, ma sono disponibile a trasferirmi, anche
+    all’estero.</h2>
+  <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
+    esigenze
+    degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
 
 </div>
 
