add / mobile navbar (to be fixed)

--- a/index.html
+++ b/index.html
@@ -40,36 +40,34 @@
 
 <body>
 
-<!-- SIDENAV -->
+<!-- NAVBAR -->
 
-<header>
-  <div class="sidenav-title">
-    <img src="assets/img/profile-img.jpg" class="sidenav-profile-picture" alt="picture of camilla">
-    <div class="sidenav-title-text">
+<div class="navbar">
+
+  <div class="navbar-title">
+    <img src="assets/img/profile-img.jpg" class="navbar-title-picture" alt="picture of camilla">
+    <div class="navbar-title-text">
       <h1>Camilla Gammeri</h1>
       <p>UX/UI Designer</p>
     </div>
   </div>
-  <nav>
-    <ul class="sidenav-1">
-      <li><a href="index.html" class=btn-active><img src="assets\icons\user-dark.svg" alt="home icon" style="margin-right: 12px;">About</a>
-      </li>
-      <li><a href="work.html"><img src="assets\icons\folder.svg" alt="work icon" class="sidenav-icon" style="margin-right: 12px;">Work</a>
-      </li>
-      <li><a href="resume.html"><img src="assets\icons\paper.svg" alt="resume icon"
-            class="sidenav-icon" style="margin-right: 12px;">Resume</a></li>
-    </ul>
-    <ul class="sidenav-2">
-      <li><a href="https://www.linkedin.com/in/camilla-gammeri/" target="_blank"><img
-            src="assets\icons\linkedin.svg" alt="linkedin icon" class="sidenav-icon" style="margin-right: 12px;">LinkedIn<img
-            class="right-icon" src="assets\icons\arrow.svg" alt="external link icon"></a></li>
-      <li><a href="mailto:camillagammeri@gmail.com" target="_blank"><img src="assets\icons\mail.svg"
-            alt="mail icon" class="sidenav-icon" style="margin-right: 12px;">Email<img class="right-icon" src="assets\icons\arrow.svg"
-            alt="external link icon"></a></li>
-    </ul>
-  </nav>
-</header>
 
+  <ul class="navbar-link-1">
+    <li><a href="index.html" class=btn-active><img src="assets\icons\user-dark.svg" alt="home icon" class="navbar-icon">About</a></li>
+    <li><a href="work.html"><img src="assets\icons\folder.svg" alt="work icon" class="navbar-icon">Work</a></li>
+    <li><a href="resume.html"><img src="assets\icons\paper.svg" alt="resume icon" class="navbar-icon">Resume</a></li>
+  </ul>
+
+  <ul class="navbar-link-2">
+    <li><a href="https://www.linkedin.com/in/camilla-gammeri/" target="_blank"><img
+          src="assets\icons\linkedin.svg" alt="linkedin icon" class="navbar-icon"><span class="external-link-text">LinkedIn</span><img
+          class="navbar-right-icon" src="assets\icons\arrow.svg" alt="external link icon"></a></li>
+    <li><a href="mailto:camillagammeri@gmail.com" target="_blank"><img src="assets\icons\mail.svg"
+          alt="mail icon" class="navbar-icon"><span class="external-link-text">Email</span><img class="navbar-right-icon" src="assets\icons\arrow.svg"
+          alt="external link icon"></a></li>
+  </ul>
+
+</div>
 
 <!-- CONTENT -->
 
@@ -78,6 +76,21 @@
   <h1>Ciao! Piacere di conoscerti 👋</h1>
   <h2>Sono Camilla, UX/UI Designer Junior. Attualmente mi trovo a Pavia, ma sono disponibile a trasferirmi, anche
     all’estero.</h2>
+  <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
+    esigenze
+    degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
+  <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
+    esigenze
+    degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
+  <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
+    esigenze
+    degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
+  <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
+    esigenze
+    degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
+  <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
+    esigenze
+    degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
   <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
     esigenze
     degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
