add / spotify widget + edit / styles & improvements

--- a/index.html
+++ b/index.html
@@ -73,27 +73,39 @@
 
 <div class="content">
 
-  <h1>Ciao! Piacere di conoscerti 👋</h1>
-  <h2>Sono Camilla, UX/UI Designer Junior. Attualmente mi trovo a Pavia, ma sono disponibile a trasferirmi, anche
-    all’estero.</h2>
-  <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
-    esigenze
-    degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
-  <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
-    esigenze
-    degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
-  <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
-    esigenze
-    degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
-  <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
-    esigenze
-    degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
-  <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
-    esigenze
-    degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
-  <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
-    esigenze
-    degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
+  <div class="content-intro">
+
+    <p>Ciao 😊</p>
+
+    <h1>Sono <span style="color: var(--neutral-000);">Camilla</span>, <span style="color: var(--neutral-000);">UX/UI Designer Junior</span>. Abito a <span style="color: var(--neutral-000);">Pavia</span>, ma sono disponibile a trasferirmi</h1>
+
+    <p>La mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
+      esigenze degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
+
+  </div>
+  
+  <div class="content-music">
+
+    <p>Quando lavoro, la musica mi aiuta a concentrarmi, stimola la creatività e mi accompagna nei momenti di maggiore flusso. In questa playlist trovi un mix di brani che sto ascoltando regolarmente.</p>
+
+    <p style="font-size: 32px; font-style: italic; text-align: center;">⚡Fai play per entrare nel mio mondo⚡</p>
+    
+    <div class="spotify">
+      <iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/playlist/4kPTauGQOi0IQUDmRCHmee?utm_source=generator&theme=0" width="100%"
+        height="352" frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
+
+  </div>
+
+  <div class="footer">
+    
+    <span><p>Designed & coded by Camilla Gammeri</p><p>/</p><a href="https://github.com/camillagammeri/portfolio" target="_blank">View GitHub repository</a><img src="assets\icons\arrow.svg" alt="external link icon"></span>
+  
+  </div>
+
+
 
 </div>
 
