edit / content & styles

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
     <p class="guidingtext">Non solo design...</p>
 
     <p>Il ruolo di UX/UI designer mi ha finalmente dato una forma che prima sentivo mancarmi, ma trovo riduttivo definirmi solo
-    tramite la mia professione. Fanno parte di me anche tante altre cose, come la passione per i <span class="keyword">viaggi</span>🌎, che mi piace programmare in autonomia, la mia <span class="keyword">macchina fotografica</span>📸, compagna di esplorazioni, e l'amore per i <span class="keyword">cavalli</span>🐴, nato quando ero molto piccola. Più recentemente, i <span class="keyword">The Killers</span>⚡sono diventati la mia band del cuore.</p>
+    tramite la mia professione. Fanno parte di me anche tante altre cose, come la passione per i <span class="keyword">viaggi</span>, che mi piace programmare in autonomia, la mia <span class="keyword">macchina fotografica</span>, compagna di esplorazioni, e l'amore per i <span class="keyword">cavalli</span>, nato quando ero molto piccola. Più recentemente, i <span class="keyword">The Killers</span> sono diventati la mia band del cuore.</p>
 
-    <p>E proprio la <span class="keyword">musica</span> è una parte importante del mio lavoro. Mi aiuta a concentrarmi, stimola la mia creatività e mi accompagna nei momenti di maggiore flusso. Se vuoi ascoltare alcuni dei miei brani preferiti, ho creato questa playlist apposta per te! <span style="font-weight: 500;">Fai play per entrare nel mio mondo 👇</span></p>
+    <p>E proprio la <span class="keyword">musica</span> è una parte importante del mio lavoro. Mi aiuta a concentrarmi, stimola la mia creatività e mi accompagna nei momenti di maggiore flusso. Se vuoi ascoltare alcuni dei miei brani preferiti, ho creato questa playlist apposta per te!</p>
 
-    <!-- <p class="quote">Fai play per entrare nel mio mondo👇</p> -->
+    <p><span style="font-weight: 500;">Fai play per entrare nel mio mondo 👇</span></p>
     
     <div class="spotify">
 
