add / google search console meta tag

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
   <meta property="og:image:alt" content="Camilla Gammeri web portofolio preview" />
   <meta property='og:image:width' content='1200' />
   <meta property='og:image:height' content='630' />
+
+  <!--GOOGLE SEARCH CONSOLE-->
+
+  <meta name="google-site-verification" content="qPHOAagwie_pzIMYSm9y8sscIHj44J2EATTRnFdetrs" />
+
 </head>
 
 <body>
