add / google analytics tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="it">
 
 <head>
+
   <title>Camilla Gammeri | UX/UI Designer</title>
   <meta name="description"
     content="👋 Camilla here. I will design an user centred and engaging digital experience for your product or service. Jump inside my website to discover my work!">
@@ -43,6 +44,17 @@
   <meta property="og:image:alt" content="Camilla Gammeri web portofolio preview" />
   <meta property='og:image:width' content='1200' />
   <meta property='og:image:height' content='630' />
+
+  <!-- Google tag (gtag.js) -->
+   
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-B6JKFBT6EZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-B6JKFBT6EZ');
+  </script>
 
   <!--GOOGLE SEARCH CONSOLE-->
 
