edit / content padding

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <p class="guidingtext">Ciao! Sono felice che tu sia qui 😊</p>
 
-    <h1>Sono Camilla, UX/UI Designer Junior</h1>
+    <h1>Sono Camilla, UX/UI Designer</h1>
       
     <p>Negli ultimi due anni ho lavorato intensamente per costruire la mia carriera nel design, affinando la base teorica e acquisendo <span class="keyword">esperienza pratica</span>.</p>
     
