--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!--FAVICON-->
 
-  <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets\favicon\favicon.ico">
 
   <!--FONT-->
 
