--- a/index.html
+++ b/index.html
@@ -81,10 +81,15 @@
     <ul class="navbar-link-1">
       <li><a href="index.html" class=btn-active><img src="assets\icons\user-dark.svg" alt="home icon" class="navbar-icon">About</a></li>
       <li><a href="work.html"><img src="assets\icons\folder.svg" alt="work icon" class="navbar-icon">Work</a></li>
-      <li><a href="resume.html"><img src="assets\icons\paper.svg" alt="resume icon" class="navbar-icon">Resume</a></li>
     </ul>
 
     <ul class="navbar-link-2">
+      <li><a href="" target="_blank"><img src="assets\icons\paper.svg"
+            alt="resume download icon" class="navbar-icon"><span class="external-link-text">Resume</span><img
+            class="navbar-right-icon" src="assets\icons\download.svg" alt="external link icon"></a></li>
+    </ul>
+
+    <ul class="navbar-link-3">
       <li><a href="https://www.linkedin.com/in/camilla-gammeri/" target="_blank"><img
             src="assets\icons\linkedin.svg" alt="linkedin icon" class="navbar-icon"><span class="external-link-text">LinkedIn</span><img
             class="navbar-right-icon" src="assets\icons\arrow.svg" alt="external link icon"></a></li>
