edit / copy & styles

--- a/index.html
+++ b/index.html
@@ -107,14 +107,15 @@
 
     <div class="content-index">
 
-      <p class="guidingtext">Ciao! Sono felice che tu sia qui 😊</p>
+      <p class="guidingtext">Ciao!😊</p>
 
       <h1>Sono Camilla, UX/UI Designer</h1>
         
-      <p>Negli ultimi due anni ho lavorato intensamente per costruire la mia carriera nel design, affinando la base teorica e acquisendo <span class="keyword">esperienza pratica</span>.</p>
+      <p style="font-weight: 500;">Negli ultimi due anni ho lavorato intensamente per costruire la mia carriera nel design, affinando la base teorica e acquisendo <span class="keyword">esperienza pratica</span>. Ho sviluppato competenze nella progettazione di <span class="keyword">prodotti digitali efficaci, piacevoli e accessibili</span>.</p>
+
+      <p style="font-weight: 500;">Oggi la mia priorità è progettare soluzioni che bilancino gli <span class="keyword">obiettivi di business</span> e le <span class="keyword">esigenze delle persone</span>, con un <span class="keyword">approccio basato sui dati e orientato ai risultati</span>.</p>
       
-      <p class="quote" style="margin-bottom: 40px;">Oggi la mia priorità è creare soluzioni che siano un punto di incontro vincente tra gli obiettivi di business e le
-        esigenze degli utenti, affrontando ogni sfida con un approccio multidimensionale</p>
+      <p class="quote" style="margin-bottom: 40px;">Oggi la mia priorità è progettare soluzioni che bilancino gli obiettivi di business e le esigenze delle persone, con un approccio basato sui dati e orientato ai risultati.</p>
 
       <p class="guidingtext">Come sono arrivata a questo punto?</p>
 
