--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
       <h1>Sono Camilla, UX/UI Designer</h1>
         
-      <p style="font-weight: 500;">Negli ultimi due anni ho lavorato intensamente per costruire la mia carriera nel design, affinando le mie competenze nella progettazione di <span class="keyword">esperienze digitali efficaci, piacevoli e accessibili</span>.</p>
+      <p style="font-weight: 500;">Negli ultimi due anni ho lavorato intensamente per affinare le mie competenze nella progettazione di <span class="keyword">esperienze digitali efficaci, piacevoli e accessibili</span>.</p>
       
       <p class="quote" style="margin-bottom: 40px; line-height: 160%;">Oggi la mia priorità è creare soluzioni che bilancino gli obiettivi di business e le esigenze delle persone, con un approccio basato sui dati e orientato ai risultati.</p>
 
