--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 
     <footer>
 
-      <span><p>Designed & coded by Camilla Gammeri</p><p class="footer-slash">/</p><a href="https://github.com/camillagammeri/portfolio" target="_blank"><img src="assets\icons\github.svg" alt="git hub icon">Open GitHub repository</a></span>
+      <span><p>Coded by Camilla Gammeri</p><p class="footer-slash">/</p><a href="https://github.com/camillagammeri/portfolio" target="_blank"><img src="assets\icons\github.svg" alt="git hub icon">Open GitHub repository</a></span>
       
-      <p>© 2024 Camilla Gammeri. All rights reserved.</p>
+      <p>© 2024-2025 Camilla Gammeri. Tutti i diritti riservati.</p>
 
     </footer>
 
