edit / meta description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <title>Camilla Gammeri | UX/UI Designer</title>
   <meta name="description"
-    content="Progetto esperienze digitali efficaci e coinvolgenti, il punto d'incontro vincente tra obiettivi di business ed esigenze degli utenti. Scopri i miei lavori!">
+    content="Progetto esperienze digitali efficaci, piacevoli e accessibili, bilanciando gli obiettivi di business e le esigenze delle persone. Scopri i miei lavori!">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
