edit / resume download

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </ul>
 
     <ul class="navbar-link-2">
-      <li><a href="assets\download\Camilla_Gammeri_Resume.pdf" target="_blank" download="Camilla_Gammeri_Resume"><img src="assets\icons\paper.svg"
+      <li><a href="assets\download\Camilla_Gammeri_Resume.pdf" target="_blank"><img src="assets\icons\paper.svg"
             alt="resume download icon" class="navbar-icon"><span class="external-link-text">Resume</span><img
             class="navbar-right-icon" src="assets\icons\download.svg" alt="external link icon"></a></li>
     </ul>
